--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Letter</title>
     <meta charset="UTF-8">
     <meta name="author" content="Dr. Eleanor Gaye">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div id="sender">
