style tag added and css link removed

--- a/letter.html
+++ b/letter.html
@@ -4,7 +4,35 @@
     <title>Letter</title>
     <meta charset="UTF-8">
     <meta name="author" content="Dr. Eleanor Gaye">
-    <link rel="stylesheet" href="/style.css">
+    <style>
+        #sender {
+            display: block;
+            margin-left: 50%;
+            width: 50%;
+            text-align: right;
+        }
+
+        #sender time {
+            display: block;
+            margin-top: 20px;
+        }
+
+        #sender h4 {
+            margin: 0;
+        }
+
+        address {
+            line-height: 25px;
+        }
+
+        #content {
+            line-height: 25px;
+        }
+
+        #content li {
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
     <div id="sender">
