sender-column fix

--- a/letter.html
+++ b/letter.html
@@ -16,11 +16,11 @@
     <main>
         <article>
             <address class="sender-column">
-                <strong>Dr. Eleanor Gaye</strong>
-                Awesome Science facultybr<br>
+                <strong>Dr. Eleanor Gaye</strong><br>
+                Awesome Science faculty<br>
                 University of Awesome<br>
                 Bobtown, CA 99999,<br>
-                USA<br>
+                USA
                 <p>
                     <strong>Tel:</strong> 123-456-7890<br>
                     <strong>Email:</strong> no_reply@example.com
